Refactored /warm API to spawn async jobs
